--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "homepage": "https://github.com/chrislewisjones/Storefront#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "console.table": "^0.10.0",
     "inquirer": "^6.2.2",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "table": "^5.2.3"
   }
 }
